     http://www.lavrsen.dk/foswiki/bin/view/Motion/MotionStreamAuthPatch
   * Implemented new logging system 
     http://www.lavrsen.dk/foswiki/bin/view/Motion/MotionLog (Angel Carpintero)
   * Added a macro MOTION_LOG , no need to add __FUNCTION__ anymore. (Angel Carpintero)
   * Added EXIF feature for jpeg images , http://www.lavrsen.dk/foswiki/bin/view/Motion/ExifTaggingPatch (Wim Lewis)

Bugfixes
   * Avoid segfault detecting strerror_r() version GNU or SUSv3. (Angel Carpintero)
   * Fix Segfault on reload or quit for vloopback (maybe other v4l1 devices too) (Peter Holik)
     http://www.lavrsen.dk/foswiki/bin/view/Motion/BugReport2009x06x17x090603
   * Allow compile with NetBSD and make LP64 compliant video_freebsd.c (Andreas Wrede)
   * Avoid compile vloopback in BSD (Angel Carpintero)
   * V4L2 fourcc GRBG not supported, updated default value for v4l2_palette 17. (Isaac Richter)
     http://www.lavrsen.dk/foswiki/bin/view/Motion/BugReport2009x10x29x222753
   * Exit when image dimension are not modulo 16. (Angel Carpintero)
   * Avoid logs flooding using some options of netcam_keepalive and try to discard images with 
     weird header Content-Lenght 0. (Angel Carpintero)
   * Only use post capture when we setup to record videos with external pipe or ffmpeg. (Angel Carpintero)   
   * Fix introduced bug for Content-Lenght = 0 in svn r476. (Angel Carpintero)
   * Avoid segfault when motion cannot create a logfile. (Angel Carpintero)
   * No mysql_close
     http://www.lavrsen.dk/foswiki/bin/view/Motion/BugReport2010x11x22x033859
   * No PQfinish() (Angel Carpintero)
   * Input for webcams has to be set to -1
     http://www.lavrsen.dk/foswiki/bin/view/Motion/BugReport2011x01x21x162309

3.2.12 Summary of Changes

Bugfixes
   * Fixed name space clash with libjpeg8 (Kenneth Lavrsen)
     http://www.lavrsen.dk/foswiki/bin/view/Motion/BugReport2010x01x22x084753
   * Fixed FFV1 codec encode with ffmpeg (Angel Carpintero)